# Glucose-Monitor-App

./: README.md
GlucoseTracker-1/: app.py  pyproject.toml
GlucoseTracker-1/assets/: style.css
GlucoseTracker-1/components/: glucose_display.py  manual_entry.py  statistics.py  trends.py
GlucoseTracker-1/models/: __init__.py  base.py  models.py
GlucoseTracker-1/utils/: alert_manager.py  data_processor.py  db_utils.py  nightscout_api.py
